# wassette

./: .gitignore  .wakatime-project  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  _typos.toml  audit.toml  build.rs  deny.toml  flake.nix  install.ps1  install.sh  mcp.wit  policy.toml  policy.yaml
.github/: dependabot.yml
.github/actions/rust-cache/: action.yml
.github/instructions/: changelog.instructions.md  rust.instructions.md
.github/workflows/: dependabot-automerge.yml  docs.yml  examples.yml  release.yml  rust.yml
Formula/: wassette.rb
cmd/: component2json.rs  fetch-runtime.rs  main.rs
crates/component2json/: Cargo.toml  README.md
crates/component2json/cmd/: main.rs
crates/component2json/src/: lib.rs
crates/component2json/testdata/: filesystem.wasm
crates/lifecycle-manager/: Cargo.toml
crates/lifecycle-manager/src/: lib.rs
crates/lifecycle-proto/: Cargo.toml  build.rs
crates/lifecycle-proto/protos/: service.proto
crates/lifecycle-proto/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: components.rs  lib.rs  prompts.rs  resources.rs  tools.rs
crates/mcp-wasmtime-server/: Cargo.toml
crates/mcp-wasmtime-server/src/: components.rs  lib.rs  prompts.rs  resources.rs  tools.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs  parser.rs  types.rs
crates/policy/testdata/: comprehensive.yaml  development.yaml  docker-privileged.yaml  docker.yaml  environment-only.yaml  minimal.yaml  network-only.yaml  resource-limits.yaml  restricted.yaml  storage-only.yaml  web-service.yaml
crates/wassette/: Cargo.toml
crates/wassette/src/: http.rs  lib.rs  loader.rs  policy_internal.rs  wasistate.rs
crates/weld/: Cargo.toml
crates/weld/src/: lib.rs  wasistate.rs
design/: architecture.md  weld-permission-system.md
docs/: TODO.md  book.toml  cli.md  faq.md  mcp-clients.md  nix.md  winget.md
docs/design/: weld-permission-system.md
docs/development/: go.md  javascript.md  python.md  rust.md
docs/src/: SUMMARY.md  homebrew.md  mcp-clients.md  overview.md  winget.md
examples/eval-py/: .gitignore  Justfile  README.md  main.py  pyproject.toml
examples/eval-py/wit/: world.wit
examples/eval-py/wit_world/: __init__.py  types.py
examples/fetch-rs/: Cargo.toml  Justfile  README.md  policy.yaml
examples/fetch-rs/src/: bindings.rs  lib.rs
examples/fetch-rs/wit/: world.wit
examples/filesystem/: Cargo.toml  README.md  filesystem.wasm  policy.yaml
examples/filesystem-rs/: Cargo.toml  README.md  policy.yaml
examples/filesystem-rs/src/: bindings.rs  lib.rs
examples/filesystem/src/: bindings.rs  lib.rs
examples/filesystem/wit/: world.wit
examples/filesystem2/: Cargo.toml  filesystem2.wasm  policy.yaml
examples/get-weather/: .gitignore  README.md  package-lock.json  package.json  policy.yaml  weather.js
examples/get-weather-js/: Justfile  README.md  package-lock.json  package.json  weather.js
examples/get-weather-js/wit/: mcp.wit
examples/gomodule-go/: .gitignore  Justfile  README.md  go.mod  go.sum  main.go
examples/gomodule-go/wit/: world.wit
examples/time-server-js/: .gitignore  Justfile  README.md  package-lock.json  package.json  policy.yaml  time.js
examples/time-server-js/wit/: world.wit
protos/: service.proto
scripts/: copyright.sh  verify_components.sh
src/: commands.rs  config.rs  database.rs  env_tests.rs  format.rs  lib.rs  main.rs  manager.rs  wasmtimed.rs  weld.rs
src/wasmtimed/: wasistate.rs
tests/: cli_integration_test.rs  component_policy_integration_test.rs  fetch_integration_test.rs  file_integration_test.rs  grant_permission_integration_test.rs  integration_test.rs  structured_output_integration_test.rs  transport_integration_test.rs
tests/common/: mod.rs
winget/: Microsoft.Wassette.yaml
