[package]
name = "mcp-wasmtime"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
component2json = { path = "crates/component2json" }
etcetera = "0.10"
futures = "0.3"
lifecycle-manager = { path = "crates/lifecycle-manager" }
lifecycle-proto = { path = "crates/lifecycle-proto" }
mcp-sdk = "0.0.3"
mcp-server = { path = "crates/mcp-server" }
policy-mcp = { git = "https://github.com/semcp/policy-mcp-rs", branch = "main" }
prost = "0.13"
rmcp = "0.1.5"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.8"
test-log = "0.2"
thiserror = "2.0.11"
tokio = "1.0"
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7.14"
tonic = "0.13"
tonic-build = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
wasmtime = "32"
wasmtime-wasi = "32"
wasmtime-wasi-http = "32"
wasmtime-wasi-config = "32"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
component2json = { workspace = true }
lifecycle-manager = { workspace = true }
lifecycle-proto = { workspace = true }
mcp-sdk = { workspace = true }
mcp-server = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "transport-sse-server",
    "macros",
] }
serde_json = { workspace = true }
policy-mcp = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["transport", "codegen", "prost"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wasmtime-wasi-config = { workspace = true }

[[bin]]
name = "mcp-wasmtime"
path = "src/main.rs"

[[bin]]
name = "component2json"
path = "cmd/component2json.rs"

[[bin]]
name = "fetch-runtime"
path = "cmd/fetch-runtime.rs"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = { workspace = true }
tempfile = "3.8"
test-log = { version = "0.2", features = ["trace"] }
tokio-test = "0.4"
tracing-test = "0.2"
