[package]
name = "wassette-mcp-server"
version = "0.1.0"
edition = "2021"
license.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0"
component2json = { path = "crates/component2json" }
etcetera = "0.10"
futures = "0.3"
wassette = { path = "crates/wassette" }
mcp-sdk = "0.0.3"
mcp-server = { path = "crates/mcp-server" }
oci-client = "0.15"
oci-wasm = "0.3"
policy = { path = "crates/policy" }
reqwest = "0.12"
rmcp = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.8"
test-log = "0.2"
thiserror = "2.0.11"
tokio = "1.47"
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7.14"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
wasmtime = "33"
wasmtime-wasi = "33"
wasmtime-wasi-http = "33"
wasmtime-wasi-config = "33"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
wassette = { workspace = true }
mcp-server = { workspace = true }
oci-client = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "transport-sse-server",
    "transport-io",
    "macros",
] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures = { workspace = true }

[[bin]]
name = "wassette"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.4"
temp-env = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
tempfile = "3.8"
test-log = { version = "0.2", features = ["trace"] }
tokio-test = "0.4"
tracing-test = "0.2"
testcontainers = "0.25"
oci-wasm = "0.3"
oci-client = "0.15"
hyper = { version = "1.0", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = "0.1"
futures-util = "0.3.30"
rand = "0.9"
bytes = "1"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rcgen = "0.14"
