[package]
name = "component2json"
version = "0.1.0"
edition = "2021"
description = "A library for converting WebAssembly Interface Types (WIT) to JSON Schema and back"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "component2json"
path = "cmd/main.rs"