[package]
name = "lifecycle-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
component2json = { path = "../component2json" }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream = { workspace = true, features = ["fs"] }
tracing = { workspace = true, features = ["attributes"] }
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-test = { workspace = true }
