[package]
name = "lifecycle-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }

[package.metadata.cargo-machete]
# used as part of a derive macro
ignored = ["prost"]
