[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
weld = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
tokio-test = { workspace = true }
