[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
weld = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
tokio-test = { workspace = true }
