[package]
name = "fetch-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde_json = "1.0.137"
spin-executor = "3.0.1"
spin-sdk = "3.0.1"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
scraper = "0.18.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:fetch-rs"

[workspace]
