[package]
name = "filesystem2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
serde = "1.0.217"
serde_json = "1.0.137"
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:filesystem2"

[package.metadata.component.dependencies]
